crates/rome_diagnostics/tests/macros/error_enum.stderr
error: enums are not supported by the Diagnostic derive macro
 --> tests/macros/error_enum.rs:4:1
  |
4 | enum ErrorEnum {
  | ^^^^
